# MatrixTextScroll

./: CMakeLists.txt  README.md
inc/: color.h  line.h  term_window.h
src/: colors.cpp  line.cpp  main.cpp  term_window.cpp
